--- a/hangoutsync/invite/index.html
+++ b/hangoutsync/invite/index.html
@@ -1,10 +1,82 @@
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <title>HangoutSync</title>
-        <meta http-equiv="refresh" content="0; url=https://play.google.com/store/apps/details?id=com.hangoutsync.hangoutsync">
-    </head>
-    <body>
-        <p>Si no has sido redirigido, <a href="https://play.google.com/store/apps/details?id=com.hangoutsync.hangoutsync">haz clic aquí para descargar HangoutSync desde la Play Store</a>.</p>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Únete a mi grupo en HangoutSync</title>
+    <!-- Opcional: Un poco de estilo para que se vea mejor en móviles -->
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f2f5;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            background-color: white;
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            font-size: 24px;
+            color: #1c1e21;
+        }
+        p {
+            font-size: 16px;
+            color: #606770;
+        }
+        .play-button {
+            display: inline-block;
+            background-color: #007bff;
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            border-radius: 8px;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+        .play-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Has recibido una invitación</h1>
+        <p>Para unirte al grupo, necesitas instalar la aplicación HangoutSync.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.hangoutsync.hangoutsync" class="play-button">
+            Descargar en Google Play
+        </a>
+    </div>
+
+    <!-- Este script intenta abrir la app si está instalada, 
+         y si falla, redirige a Play Store tras un momento. -->
+    <script>
+        window.onload = function() {
+            // Intenta abrir el enlace profundo
+            const appLink = "intent://j03lqm.github.io/hangoutsync/invite" + window.location.search + "#Intent;scheme=https;package=com.hangoutsync.hangoutsync;end";
+            
+            // Si el usuario viene de un navegador que no sea Chrome, el intent puede no funcionar.
+            // La redirección a Play Store es el fallback seguro.
+            const playStoreLink = "https://play.google.com/store/apps/details?id=com.hangoutsync.hangoutsync";
+
+            // Esperamos un poco para dar tiempo al navegador a procesar el intent://
+            setTimeout(function () {
+                // Esta redirección solo ocurrirá si el intent falla (es decir, la app no está instalada)
+                window.location.replace(playStoreLink);
+            }, 1000);
+            
+            // Intenta navegar al intent. No todos los navegadores lo soportan bien.
+            window.location.replace(appLink);
+        };
+    </script>
+</body>
+</html>
